add optional memo field for amount selector

--- a/app/assets/locales/locale-ja.json
+++ b/app/assets/locales/locale-ja.json
@@ -1889,7 +1889,8 @@
         "transfer_actions": "転送または、サポートするアセットを入出金するにはここをクリックしてください。",
         "update_position": "ポジションを更新するにはここをクリックしてください。いつでもポジションの賃借や担保比率を変更できます。",
         "withdraw_address": "まだ%(asset)sのアドレスをお持ちでない場合は、出金する前にウォレットプロバイダーを探して作成する必要があります。",
-        "withdraw_full": "全額を出金するにはここをクリックしてください。"
+        "withdraw_full": "全額を出金するにはここをクリックしてください。",
+        "add_memo_field": "メモテキストフィールドを追加"
     },
     "transaction": {
         "amount_sell": "Amount to sell",
