--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1895,7 +1895,8 @@
         "transfer_actions": "Нажмите здесь, чтобы совершить перевод или разместить депозит/вывести те активы, которые это позволяют.",
         "update_position": "Нажмите здесь, чтобы обновить Вашу позицию. Вы в любой момент сможете изменить уровни долга и/или обеспечения Вашей позиции.",
         "withdraw_address": "Если у Вас еще нет %(asset)s адреса, то для того чтобы завершить вывод средств, пожалуйста, найдите подходящего провайдера кошелька и создайте его.",
-        "withdraw_full": "Нажмите, чтобы вывести баланс целиком"
+        "withdraw_full": "Нажмите, чтобы вывести баланс целиком",
+        "add_memo_field": "Добавить поле для ввода мемо"
     },
     "transaction": {
         "amount_sell": "Количество для продажи",
