--- a/app/assets/locales/locale-zh.json
+++ b/app/assets/locales/locale-zh.json
@@ -1889,7 +1889,8 @@
         "transfer_actions": "点击这里进行转账，或充值/提取支持充提功能的资产。",
         "update_position": "更新债仓。你可随时更新债务及抵押物数量。",
         "withdraw_address": "如果您还没有 %(asset)s 的钱包地址，请您寻找钱包提供商并创建一个钱包，以完成提款。",
-        "withdraw_full": "点击提款全部余额"
+        "withdraw_full": "点击提款全部余额",
+        "add_memo_field": "Add memo text field"
     },
     "transaction": {
         "amount_sell": "出售数量",
