--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -20,7 +20,7 @@
         "contacts": "Contacts",
         "create_account": "Create account",
         "create_new": "Create A New Account",
-        "deactivate_suspicious_proposals": "Deactivate suspicious proposals",
+        "deactivate_suspicious_proposals": "Hide approve for suspicious proposals",
         "deposit": "Deposit BTS",
         "deposit_address": "Your deposit address is your account name",
         "deposit_withdraw": "Deposit/Withdraw",
@@ -1874,6 +1874,7 @@
         "nodes_popup": "Click here to open the access settings popup that allows you to switch nodes if necessary",
         "over_limit": "The bridge does not have enough of the desired asset for this buy order",
         "propose_scam": "This proposal was created by a known scammer or from someone that you blacklisted!",
+        "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "propose_tip": "Propose another user to initiate a transaction",
         "proxy_remove": "You have a proxy set, to remove it simply clear this input field",
         "proxy_search": "Search for an account to be used as your proxy for voting",
