--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -1746,6 +1746,7 @@
             "description": "Pedir prestado un BitAsset de la cadena de bloques de BitShares block por el bloqueo de la garantía (e.g. bitUSD, bitCNY, etc.)",
             "do_it": "Let's do it",
             "get_started": "Get started",
+            "navigate_with_keys": "The mechanism of the SmartCoin generation will be explained in the following steps. You can also use arrow keys to navigate",
             "next": "Next",
             "now_ready": "Finalize the creation of your own Collateralized Debt Position",
             "previous": "Previous",
@@ -1874,6 +1875,7 @@
         "over_limit": "El puente no tiene suficiente del activo deseado para esta orden de compra",
         "propose_scam": "¡Esta propuesta fue creada por un estafador conocido, no la aprueba!",
         "propose_tip": "Proponer otro usuario para iniciar una transacción",
+        "propose_unknown": "This proposal was created by or targets an unknown account (not in contacts or whitelist). Beware of scam attempts and carefully check the contained operations.",
         "proxy_remove": "Tiene un conjunto de proxy, para eliminarlo, simplemente borre este campo de entrada",
         "proxy_search": "Busque una cuenta que se utilizará como su proxy para votar",
         "registration": {
