[FEATURE] CB-1459 tos preparations

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2093,7 +2093,10 @@
                 "I hereby agree that by staking %(amount)s BCO, I fully understand that they will be locked away for %(month)s and that there is no way of claiming the funds before the staking term is over. I also accept the share in the profits of CryptoBridge platform which is attributed to my staked funds.",
             "no_balances": "You have no open BridgeCoin staking positions.",
             "bco_available": "Available: ",
-            "bco_not_available": "No BCO available "
+            "bco_not_available": "No BCO available ",
+            "terms_and_conditions": "CryptoBridge Terms and Conditions",
+            "terms_and_conditions_accept":
+                "I have read and agree to the %(cryptobridge_terms_and_conditions)s"
         },
         "dashboard": {
             "all_markets": "All Markets"
