--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -51,7 +51,7 @@
         "ignore": "Скрыть",
         "in_open": "Это количество %(asset)s, которые у Вас в открытых ордерах.",
         "in_open_value": "Это эквивалентная ценность %(asset)s, которая у Вас в открытых ордерах.",
-        "intro_text_1": "<b>BitShares 2.0</b> децентрализованная биржа, также известная как DEX - это криптовалютная торговая платформа следующего поколения.",
+        "intro_text_1": "Your Decentralized Platform",
         "intro_text_2": "<b>DEX</b> децентрализована по самой своей сути, что позволяет Вам торговать основным токеном BitShares (BTS) и разнообразными не требующими доверия активами со стабильной, привязанной к рынку ценой, такими как bitUSD, bitCNY, bitGold и многими другими. Все эти активы могут торговаться <b>без риска</b>, связанного с участием контрагентов, оставляя контроль над Вашими средствами полностью в Ваших руках.",
         "intro_text_3": "Также <b>DEX</b> дает возможность создавать выпускаемые пользователем активы (user-issued assets - UIA), которые могут торговаться с помощью регистра ордеров против любого другого актива на платформе, как не требующего доверия, так и выпущенного пользователем. Самым известным эмитентом на платформе является <b>OpenLedger</b>, поддерживающий такие активы, как BTC, ETH, DASH, STEEM и многие другие",
         "intro_text_4": "Это уникальный микс традиционной и децентрализованной торговли, и всё это в таком знакомом для криптовалютных трейдеров интерфейсе биржи. Удачной торговли!",
