add autolock icon
Signed-off-by: Stefan Schiessl <stefan.schiessl@blockchainprojectsbv.com>

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -1695,7 +1695,8 @@
         "valid_node_url": "Node URL must begin with ws:// or wss://",
         "view_keys": "View keys",
         "wallet": "Local Wallet",
-        "walletLockTimeout": "Wallet auto-lock time (seconds, 0 to disable)",
+        "walletLockTimeout": "Wallet auto-lock time (in seconds, 0 to disable)",
+        "walletLockTimeoutTooltip": "Click to adjust the time before the wallet auto-locks",
         "wallet_required": "Local wallet required",
         "wallet_required_text": "In order to restore a backup you will need to switch to a local wallet first, do so by clicking the button below",
         "wallet_text": "Control the details of your local wallet.",
