--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -1696,6 +1696,7 @@
         "view_keys": "Просмотреть ключи",
         "wallet": "Локальный кошелек",
         "walletLockTimeout": "Время автоблокировки кошелька (в секундах, 0 - для отключения)",
+        "walletLockTimeoutTooltip": "Click to adjust the time before the wallet auto-locks",
         "wallet_required": "Требуется модель кошелька",
         "wallet_required_text": "Чтобы восстановить резервную копию, Вам нужно сначала переключиться на модель кошелька; чтобы это сделать, нажмите кнопку ниже",
         "wallet_text": "Управление деталями Вашего локального кошелька.",
@@ -1809,6 +1810,7 @@
         "title": "Невозможно синхронизоваться с API сервером"
     },
     "tooltip": {
+        "add_memo_field": "Добавить поле для ввода мемо",
         "borrow": "Одолжить %(asset)s у сети. Это создаст смарт-контракт, который заблокирует Ваш залог до того момента, когда Вы измените позицию или потребуется марджин колл.",
         "borrow_disabled": "%(asset)s находится в процессе глобального расчёта. Создание маржинальных позиций невозможно до момента его восстановления. Посетите страницу информации об активе, чтобы узнать подробности.",
         "bridge": "Мосты позволяют вносить депозиты в любых внешних активах и мгновенно переводить средства в желаемый актив шлюза.",
@@ -1897,8 +1899,7 @@
         "transfer_actions": "Нажмите здесь, чтобы совершить перевод или разместить депозит/вывести те активы, которые это позволяют.",
         "update_position": "Нажмите здесь, чтобы обновить Вашу позицию. Вы в любой момент сможете изменить уровни долга и/или обеспечения Вашей позиции.",
         "withdraw_address": "Если у Вас еще нет %(asset)s адреса, то для того чтобы завершить вывод средств, пожалуйста, найдите подходящего провайдера кошелька и создайте его.",
-        "withdraw_full": "Нажмите, чтобы вывести баланс целиком",
-        "add_memo_field": "Добавить поле для ввода мемо"
+        "withdraw_full": "Нажмите, чтобы вывести баланс целиком"
     },
     "transaction": {
         "amount_sell": "Количество для продажи",
