--- a/app/assets/locales/locale-es.json
+++ b/app/assets/locales/locale-es.json
@@ -1696,6 +1696,7 @@
         "view_keys": "Ver claves",
         "wallet": "Billetera local",
         "walletLockTimeout": "Tiempo de bloqueo automático de Wallet (seconds, 0 to disable)",
+        "walletLockTimeoutTooltip": "Click to adjust the time before the wallet auto-locks",
         "wallet_required": "Se requiere billetera local",
         "wallet_required_text": "Para restaurar una copia de seguridad, primero deberá cambiar a una billetera local, haga clic en el botón de abajo",
         "wallet_text": "Controle los detalles de su billetera local.",
@@ -1809,6 +1810,7 @@
         "title": "Error al sincronizar con el API del servidor "
     },
     "tooltip": {
+        "add_memo_field": "Añadir campo de texto memo",
         "borrow": "pedir prestado %(asset)s desde la red. Esto crea un contrato inteligente que bloquea su colateral hasta que modifique la posición o se requiera una llamada a mergen.",
         "borrow_disabled": "%(asset)s is in global settlement. Margin positions can't be created until it is revived. See asset details page for more information",
         "bridge": "Bridges allow deposit of any external assets and instant trade into the desired gateway asset",
@@ -1897,8 +1899,7 @@
         "transfer_actions": " Haga clic aquí para hacer una transferencia, o para depositar / retirar aquellos activos que lo soportan.",
         "update_position": "Haga clic aquí para actualizar su posición. En cualquier momento puede cambiar los neveles de deuda y/o el colateral de su posición.",
         "withdraw_address": "Si aún no tienes una %(asset)s dirección, busca un proveedor de billetera y crea uno para completar el retiro del saldo.",
-        "withdraw_full": "Haga clic para retirar el saldo completo",
-        "add_memo_field": "Añadir campo de texto memo"
+        "withdraw_full": "Haga clic para retirar el saldo completo"
     },
     "transaction": {
         "amount_sell": "Monto a vender",
