[FEATURE] CB-1514 added imprint

--- a/app/assets/locales/locale-en.json
+++ b/app/assets/locales/locale-en.json
@@ -2059,6 +2059,9 @@
             "receive_funds_intro":
                 "In order to receive funds from another person on CryptoBridge, simply give them your account name: "
         },
+        "header": {
+            "imprint": "Imprint"
+        },
         "footer": {
             "title": "CryptoBridge decentralized exchange"
         },
