--- a/app/assets/locales/locale-ru.json
+++ b/app/assets/locales/locale-ru.json
@@ -654,6 +654,8 @@
                 "reload": "Изменение этой опции вступит в силу только после ручной перезагрузки",
                 "reverse_order_book": "Отобразить биржевой стакан в обратном порядке, чтобы ордера на покупку отображались сверху",
                 "settlements": "",
+                "show_market_depth": "Show market depth",
+                "show_price_chart": "Show price chart",
                 "single_colum_order_form": "Закрепить цену, количество, общую сумму и т.п. в одной колонке (неподвижно)"
             }
         },
